--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite previe w"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.21.1",
@@ -22,6 +22,7 @@
     "@tabler/icons-react": "^3.28.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "dotted-map": "^2.2.3",
     "framer-motion": "^11.16.0",
