--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.21.1",
     "@clerk/themes": "^2.2.4",
+    "@google/genai": "^1.34.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -31,6 +32,7 @@
     "dotted-map": "^2.2.3",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.469.0",
+    "mammoth": "^1.11.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^11.16.1",
     "react": "^18.3.1",
@@ -40,6 +42,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
