--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^11.16.1",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^10.0.2",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
     "recharts": "^3.6.0",
